# pray

./: CMakeLists.txt  README.md
src/core/: camera.h  hit.h  scene.h
src/images/: image.h
src/main/: pray.cpp  pray.h
src/maths/: ray.h  vec3.h
src/shapes/: shape.h  sphere.h
src/utils/: profile.h  progress.h
